@@ -8,7 +8,7 @@
  *   pqxx::result represents the set of result tuples from a database query
  *   DO NOT INCLUDE THIS FILE DIRECTLY; include pqxx/result instead.
  *
- * Copyright (c) 2001-2010, Jeroen T. Vermeulen <jtv@xs4all.nl>
+ * Copyright (c) 2001-2011, Jeroen T. Vermeulen <jtv@xs4all.nl>
  *
  * See COPYING for copyright license.  If you did not receive a file called
  * COPYING with this source code, please notify the distributor of this mistake,
@@ -1133,7 +1133,7 @@ private:
   {
     char_type *G =
       reinterpret_cast<char_type *>(const_cast<char *>(m_Field.c_str()));
-    setg(G, G, G + m_Field.size());
+    this->setg(G, G, G + m_Field.size());
     return int_type(m_Field.size());
   }
 };
