@@ -1,4 +1,5 @@
 3.2
+ - Supports clang++.
  - Fixes binary-data escaping problems with postgres 9.0.
  - Fixes problems with binary-string handling and escaping.
  - notify_listener has been replaced with notification_receiver.
