@@ -1,3 +1,8 @@
+2011-02-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/largeobject.hxx, include/pqxx/result.hxx, include/pqxx/util.hxx:
+ - Fixes for problems spotted by clang++.
+ tools/preprelease
+ - Test against clang as well as gcc.
 2011-02-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
  include/pqxx/basic_connection.hxx, include/pqxx/cursor.hxx:
  - Fixed "don't include this" directions; fixes #211.  Thanks ehoeks.
